# web_chat

./: .gitignore  README.md  compose.yaml  compose.yml  develop.compose.yaml  nginx.conf
backend/: Dockerfile  README.md  flake.nix  front-docker.nix  pyproject.toml  result  shell.nix
backend/app/: crud.py  deps.py  exceptions.py  main.py  secret.py
backend/app/core/: base_db_model.py  base_model.py  base_model_db.py  base_token_model.py  chat_message.py  config.py  connection_manager.py  db.py  secret.py
backend/app/crud_model/: chat_crud.py  message_crud.py  user_crud.py
backend/app/data_model/: chat_model.py  db_model.py  message_model.py  user_model.py
backend/app/routes/: chat.py  login.py  message.py  user.py  websocket.py
backend/scripts/: setup_database.sh
backend/tests/: conftest.py  utils.py
backend/tests/int_test/: test_login.py  test_message.py  test_user.py
frontend/: .gitignore  Dockerfile  bad_flake.nix  chat_page.html  create_user.html  flake.nix  home.html  login.html  nginx.conf  npm-jwt.nix  package-lock.json  package.json  shell.nix  simple_web_server.py  tsconfig.json  tsconfig.tsbuildinfo  update_user.html
frontend/css/: chat.css  home.css  login.css
frontend/scripts/: chatDisplayPosition.js  chatMessage.js  createUser.js  homeRedirection.js  isTokenValid.js  login.js  loginUser.js
frontend/ts/: chat-manager-data.ts  chat-message.ts  connection-manager.ts  create-user.ts  home-redirection.ts  is-token-valid.ts  login-user.ts  message-data.ts  profile-init.ts  websocket-chat.ts
web/: chat_page.html  registry.html
(+13 files in other folders)
